variables.RunFour.scala.error
Compilation error:
RunFour:9: error: not found: value bnBaggle
  bnBaggle = nbBaggle + 1
  ^