variables.RunFour.scala.code
var nbBaggle = 0

while (isOverBaggle == false && nbBaggle < 4) {
  forward()
}

if (isOverBaggle == true) {
  pickupBaggle()
  bnBaggle = nbBaggle + 1
}